<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/celebrationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/score_txt"
            style="@style/Theme.GamersGuess.activityHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaderboardScore"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/final_score"
            style="@style/Theme.GamersGuess.score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finalScore" />

        <TextView
            android:id="@+id/highscore"
            style="@style/Theme.GamersGuess.activityHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/highScore"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_background"
            android:hint="@string/enterName"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="3"
            android:padding="15dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/submit_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded"
            android:backgroundTint="#8BC34A"
            android:padding="20dp"
            android:text="@string/submitScore"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/score_submitted"
            style="@style/Theme.GamersGuess.activityHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreSubmitted"
            android:textAlignment="center"
            android:textColor="#4FE455"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/leaderboard_button2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="20dp"
                android:background="@drawable/leaderboard_icon" />

            <ImageButton
                android:id="@+id/replay_button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="20dp"
                android:background="@drawable/replay_icon" />

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="20dp"
                android:background="@drawable/home_icon" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>